client/src/App.css
body{
  background: #F1F2F4;
  padding: 0;
  margin: 0;
}

.app{
  padding-top: 55px;
}

.profile_page__container, .uploadstream_page__container, .browse_page__container,.catalog_page__container{
  width: 90%;
  margin: auto;
  background: white;
}

.catalog_page__container{
  box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
  border-radius: 5px;
}

.browse_page__container{
  background: transparent;
}

.home_page__container{
  width: 90%;
  margin: auto;
}

.profile_page__content, .uploadstream_page__content, .browse_page__content {
  margin-top: 30px;
  padding: 20px;
}

.catalog_page__content{
  width: 1000px;
  margin: auto;
  margin-top:30px;
  padding:30px 0px;
}

.profile_page h1, .uploadstream_page h1{
  opacity: 0.5;
  display: flex;
  align-items: center;
  font-weight: 500;
  font-size: 18px;
  margin: 0;
}

.profile_page h1 svg{
  margin-right: 10px;
  width: 16px;
  height: 16px;
}

.browse_page__content{
  display: flex;
  align-items: center;
  flex-direction: column;
}

.explore_input{
  position: relative;
}

.explore_input button{
  border-radius: 5px;
  padding: 10px 30px;
  border: none;
  font-size: 14px;
  appearance: auto;
  text-rendering: auto;
  letter-spacing: normal;
  word-spacing: normal;
  text-transform: none;
  text-indent: 0px;
  text-shadow: none;
  box-sizing: border-box;
  font: 400 13.3333px Arial;
  background: #071A0F;
  color: white;
  position: absolute;
  right:5px;
  top:5px;
}

.explore_input input{
  border: none;
  width: 100%;
  height: 45px;
  border: #e9e9e9 1px solid;
  border-radius: 5px;
  box-sizing: border-box;
  width: 600px;
  padding-right: 115px;
  padding-left: 10px;
}


.categoriesBlock{
  display: grid;
  margin-top:50px;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-column-gap: 20px;
}

.category{
  display: flex;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

.category img{
  width: 300px;
}
.category a{
  color:black;
  text-decoration: none;
}

.podcast_block{
  display: flex;
  margin-bottom: 30px;
}

.podcast_block{
  border-bottom: 1px solid rgba(0, 0 ,0, 0.1);
  padding: 30px 0px;
}


.podcast_block .podcast__right img{
  width: 100%;
  object-fit: cover;
  height: 150px;
}

.podcast__left, .podcast__right{
  flex: 0 1 50%;
}

.podcast__left{
  padding-left: 70px;
  position: relative;
}

.podcast__left .profile_image{
  position: absolute;
  top:0;
  left: 0px;
}

.podcast__left .play_button{
  position: absolute;
  width: 50px;
  height: 50px;
  border-radius: 100%;
  top: 50px;
  right: -25px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--black);
  color: white;
  transition: 0.2s all ease;
}

.podcast__left .play_button:hover{
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  cursor: pointer;
}

.podcast__left .play_button:active{
  background: black;
}

.podcast_block .podcastHeaders{
  display: flex;
}

.podcast_block .profile_image{
  width: 55px;
  height: 55px;
  border-radius: 100%;
}

.catalog_page__container{
  width: 80%;
  margin: auto;
}

.podcastHeaders h3{
  margin: 0;
  font-weight: 500;
  font-size: 16px;
}
.podcastHeaders a {
  color:black;
  text-decoration: none;
}
.podcastHeaders h4{
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  margin-top: 5px;
  opacity: 0.5
}

.podcastDescription h3{
  font-weight: 500;
  font-size: 15px;
  margin-bottom:0px;
}
.podcastDescription p{
  font-size: 13px;
  margin-top: 2px;
}

.podcastHeaders .profile_image{
  box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
}

.wall_page__container{

}

.wall_cover{
  width: 100%;
  height: 200px;
  object-fit: cover;
}

.wall_page__content{
  width: 90%;
  display: flex;
  margin: auto;
}

.wall_right .podcast_block{
  background: white;
  padding-bottom: 0px;
  flex-direction: column;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  border-radius: 7px;
}

.wall_right .podcast__left{
  padding-left: 95px;
  border-bottom: 1px solid rgba(0,0,0,0.05);
  padding-bottom: 10px;
}
.wall_right .podcast__left .profile_image{
  position: absolute;
  top:0;
  left: 25px;
}

.wall_right .interactionBlock{
  margin-left: 95px;
}

.wall_right .commentDropdown{
  margin-left: 95px;
}

.profile_image{
  width: 180px;
  height: 200px;
  border-radius: 10px;
  object-fit: cover;
  box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
}

.wall_left{
  display: flex;
  align-items: center;
  flex-direction: column;
  flex: 0 1 350px;
  transform: translateY(-115px);
}

.following_block{
  display: flex;
  margin-top: 20px;
}

.following_block div{
  margin:0px 20px;
}

.wall_left .follow_button, .wall_left .unfollow_button{
  margin-top:20px;
}

.wall_right{
  flex: 1;
}

.following_block h4{
  margin: 0;
  font-weight: 500;
  opacity: 0.5;
}

.following_block p{
  margin: 10px 0px;
  font-weight: 800;
}

.following_block div:last-child{
  text-align: right;
}

.followers_block{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  width: 200px;
  grid-row-gap: 10px;
}

.followers_block img{
  width: 40px;
  height: 40px;
  object-fit: cover;
}

.feed_content{
  /* padding: 20px; */
  /* box-shadow: 0px 3px 6px rgba(0,0,0,0.2); */
  border-radius: 5px;
}

.feed_content .episode_cover{
  height: 200px;
  object-fit: cover;
  width: 500px;
}

.feed_content .play_button{
  right: 10px;
  top:0px;
}

.feed_content .podcast__left{
  flex: 1;
}

.wall_right .user_name{
  font-size: 20px;
  font-weight: 400;
  margin: 20px 0px;
}

.chatBubble{
  box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
  padding: 5px;
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left:10px;
  transition: 0.2s;
  color: white;
  background: black;
}

.chatBubble:hover svg{
  color: black;
}

.chatBubble:hover{
  background: white;
  cursor: pointer;
}

.interactionBlock{
  display: flex;
  margin: 10px 0px;
  font-size: 14px;
}

.interactionBlock svg{
  margin-right: 5px;
}

.interactionBlock .likes{
  display: flex;
}
/* ... */

